tests/typecheck/bad/bad-map-key.scilla

fun (b : Map Bool Uint32) =>
  Uint32 0
